--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "@nativescript/core": "~8.3.5",
     "@nativescript/theme": "~3.0.2",
-    "@utls/undom-ef": "^0.5.0",
-    "dominative": "^0.0.5-alpha.0",
-    "ef-core": "^0.15.6"
+    "dominative": "^0.0.5-alpha.2",
+    "ef-core": "^0.15.6",
+    "undom-ng": "^1.0.0"
   },
   "devDependencies": {
     "@nativescript/preview-cli": "1.0.1",
